tests/parser/invalid/for-colon.inox
Module InvalidForColon

Main() :
    Var
        Total := 0
    ;

    for I in 1..10 :
        Total := Total + I
    ;
;
